arm64: dts: pxa1936: add PMU(Performance Monitor Unit) node
add PMU node for performance test

Change-Id: I98a3d79a273fa26bec4c3b2f886224b8a7afbd70
Signed-off-by: Wei Shu <weishu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -1103,4 +1103,16 @@
 		dma-names =  "iml-dma";
 		status = "disabled";
 	};
+
+	pmu {
+		compatible = "arm,armv8-pmuv3";
+		interrupts = <0 84 4>,
+			     <0 85 4>,
+			     <0 86 4>,
+			     <0 87 4>,
+			     <0 108 4>,
+			     <0 109 4>,
+			     <0 110 4>,
+			     <0 111 4>;
+	};
 };
