arch: arm64: enable simple vibrator for pxa1936 aloe
aloe project use simple vibrator, which is drived by ldo on/off

Change-Id: I3a5db0209764ebc47bcdcac00f26c28ae6101910
Signed-off-by: Fenghang Yin <yinfh@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1458,6 +1458,7 @@ CONFIG_VBUS_88PM88X=y
 CONFIG_VIBRATOR_DRV2604=y
 CONFIG_PXA9XX_AMIPC=y
 CONFIG_VIBRATOR_PWM=y
+CONFIG_VIBRATOR_SIMPLE=y
 CONFIG_PXA9XX_ACIPC=y
 # CONFIG_MXDCMMB is not set
 CONFIG_I2C=y
