arm64: configs: enable ft5336 and gt9157 touch panel for 1936
enable ft5336 and gt9157 touch panel for 1936

Change-Id: I50ea1964e5700647c906021e9e5aea9e6e544655
Signed-off-by: Xiaofei Zhu <zhuxf@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1330,6 +1330,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_EGALAX is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
 # CONFIG_TOUCHSCREEN_GT9XX is not set
+CONFIG_TOUCHSCREEN_GT9157=y
 # CONFIG_TOUCHSCREEN_ILI210X is not set
 # CONFIG_TOUCHSCREEN_GUNZE is not set
 # CONFIG_TOUCHSCREEN_ELO is not set
@@ -1354,10 +1355,11 @@ CONFIG_TOUCHSCREEN_VNC=y
 # CONFIG_TOUCHSCREEN_W90X900 is not set
 # CONFIG_TOUCHSCREEN_ST1232 is not set
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C=y
-CONFIG_TOUCHSCREEN_88MS100=y
+# CONFIG_TOUCHSCREEN_88MS100 is not set
 CONFIG_TOUCHSCREEN_MSG2133=y
 # CONFIG_TOUCHSCREEN_MSG2138 is not set
 # CONFIG_TOUCHSCREEN_FT6206 is not set
+CONFIG_TOUCHSCREEN_FOCALTECH=y
 # CONFIG_TOUCHSCREEN_SUR40 is not set
 # CONFIG_TOUCHSCREEN_TPS6507X is not set
 # CONFIG_TOUCHSCREEN_ZFORCE is not set
