arm64: defconfig: enable common panel support
enable CONFIG_MMP_PANEL_COMMON support on helan3

Change-Id: Id0b8f0a6216a5b1a59bb8616249525dcd689934a
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 3.14.27 Kernel Configuration
+# Linux/arm64 3.14.35 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -870,6 +870,7 @@ CONFIG_FW_LOADER_USER_HELPER=y
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_SYS_HYPERVISOR is not set
 # CONFIG_GENERIC_CPU_DEVICES is not set
+# CONFIG_HAVE_CPU_AUTOPROBE is not set
 CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_MMIO=y
@@ -1937,9 +1938,9 @@ CONFIG_VIDEO_MV_SC2_MMU=y
 # CONFIG_ISP_USE_TWSI3 is not set
 CONFIG_VIDEO_MV_SC2_CCIC=y
 CONFIG_HOST_SUBDEV=y
-CONFIG_SOC_CAMERA=y
 CONFIG_SUBDEV_VCM=y
 CONFIG_SUBDEV_FLASH=y
+CONFIG_SOC_CAMERA=y
 CONFIG_SOC_CAMERA_PLATFORM=y
 # CONFIG_VIDEO_RCAR_VIN is not set
 # CONFIG_VIDEO_SH_MOBILE_CSI2 is not set
@@ -2042,9 +2043,10 @@ CONFIG_B52_CAMERA_OV2680=y
 CONFIG_B52_CAMERA_OV8858=y
 CONFIG_B52_CAMERA_SR544=y
 CONFIG_B52_CAMERA_HI551=y
-CONFIG_B52_CAMERA_S5K3L2=y
 CONFIG_B52_CAMERA_S5K5E3=y
 # CONFIG_B52_CAMERA_OV5670 is not set
+CONFIG_B52_CAMERA_S5K3L2=y
+# CONFIG_B52_CAMERA_S5K4H5 is not set
 
 #
 # Tools to develop new frontends
@@ -2098,7 +2100,7 @@ CONFIG_MMP_DISP_DFC=y
 # CONFIG_MMP_VIRTUAL_RESOLUTION is not set
 # CONFIG_MMP_PANEL_HX8394_IPS3P5071 is not set
 CONFIG_MMP_PANEL_R63311=y
-# CONFIG_MMP_PANEL_COMMON is not set
+CONFIG_MMP_PANEL_COMMON=y
 CONFIG_MMP_PANEL_LG4591=y
 CONFIG_MMP_PANEL_OTM1281A=y
 CONFIG_MMP_PANEL_OTM8018B=y
@@ -2651,6 +2653,7 @@ CONFIG_UIO=y
 # CONFIG_UIO_PDRV_GENIRQ is not set
 # CONFIG_UIO_DMEM_GENIRQ is not set
 CONFIG_UIO_CODA7542=y
+# CONFIG_UIO_CODAL is not set
 CONFIG_UIO_HANTRO=y
 # CONFIG_VFIO is not set
 # CONFIG_VIRT_DRIVERS is not set
@@ -2692,7 +2695,6 @@ CONFIG_ANDROID=y
 CONFIG_ANDROID_BINDER_IPC=y
 CONFIG_ANDROID_BINDER_IPC_32BIT=y
 CONFIG_ASHMEM=y
-# CONFIG_ANDROID_LOGGER is not set
 CONFIG_ANDROID_TIMED_OUTPUT=y
 CONFIG_ANDROID_TIMED_GPIO=y
 CONFIG_ANDROID_LOW_MEMORY_KILLER=y
@@ -2913,6 +2915,7 @@ CONFIG_MRVL_WIRELESS=y
 CONFIG_MRVL_WL_SD8XXX=y
 CONFIG_MRVL_WL_BUILD_TYPE=m
 CONFIG_MRVL_DEBUG=y
+CONFIG_MRVL_LOG=y
 # CONFIG_MRVL_TZDD is not set
 # CONFIG_MRVL_SW_JTAG is not set
 CONFIG_MRVL_PANIC_FLUSH=y
@@ -3392,6 +3395,7 @@ CONFIG_CRYPTO_ANSI_CPRNG=y
 # CONFIG_CRYPTO_USER_API_HASH is not set
 # CONFIG_CRYPTO_USER_API_SKCIPHER is not set
 CONFIG_CRYPTO_HW=y
+# CONFIG_ASYMMETRIC_KEY_TYPE is not set
 CONFIG_ARM64_CRYPTO=y
 # CONFIG_CRYPTO_SHA1_ARM64_CE is not set
 # CONFIG_CRYPTO_SHA2_ARM64_CE is not set
@@ -3400,7 +3404,6 @@ CONFIG_CRYPTO_AES_ARM64_CE=y
 # CONFIG_CRYPTO_AES_ARM64_CE_CCM is not set
 # CONFIG_CRYPTO_AES_ARM64_CE_BLK is not set
 # CONFIG_CRYPTO_AES_ARM64_NEON_BLK is not set
-# CONFIG_ASYMMETRIC_KEY_TYPE is not set
 CONFIG_BINARY_PRINTF=y
 
 #
