arm64: dts: add the device tree for ltr_558als on aloe
add the device tree for ltr_558als on aloe

Change-Id: I13ed7c851d208d0b629da930919e8d3a6f30b7c1
Signed-off-by: Xiaofei Zhu <zhuxf@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1936-board-common.dtsi
@@ -893,6 +893,13 @@
 					MFP_LPM_FLOAT;
 				};
 
+				sensor_pins: sensor_pins {
+					pinctrl-single,pins = <
+						GPIO20 AF0
+					>;
+					MFP_LPM_FLOAT;
+				};
+
 				ccic1_pmx_func1: ccic1_pmx_func1 {
 					pinctrl-single,pins = <
 						GPIO77 AF1
