arm64: configs: enable lsm6ds3 ltr558 ltr55x lis3dh for aloe
enable lsm6ds3 ltr558 ltr55x lis3dh for aloe

Change-Id: I1f36bee1dea99c2f20a8acbb841b8a06152009ef
Signed-off-by: Xiaofei Zhu <zhuxf@marvell.com>

--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -1479,6 +1479,7 @@ CONFIG_I2C_MUX=y
 # CONFIG_I2C_MUX_PCA954x is not set
 # CONFIG_I2C_MUX_PINCTRL is not set
 CONFIG_I2C_HELPER_AUTO=y
+CONFIG_I2C_ALGOBIT=y
 
 #
 # I2C Hardware Bus support
@@ -1489,7 +1490,7 @@ CONFIG_I2C_HELPER_AUTO=y
 #
 # CONFIG_I2C_CBUS_GPIO is not set
 # CONFIG_I2C_DESIGNWARE_PLATFORM is not set
-# CONFIG_I2C_GPIO is not set
+CONFIG_I2C_GPIO=y
 # CONFIG_I2C_NOMADIK is not set
 # CONFIG_I2C_OCORES is not set
 # CONFIG_I2C_PCA_PLATFORM is not set
@@ -1722,6 +1723,11 @@ CONFIG_SENSORS_BME280=y
 CONFIG_SENSORS_BME280_I2C=y
 CONFIG_SENSORS_BMP280=y
 CONFIG_SENSORS_BMP280_I2C=y
+CONFIG_INPUT_LSM6DS3=y
+CONFIG_INPUT_LSM6DS3_I2C=y
+# CONFIG_INPUT_LSM6DS3_SPI is not set
+CONFIG_LSM6DS3_POLLING_MODE=y
+# CONFIG_LSM6DS3_FIFO_MODE is not set
 # CONFIG_SENSORS_SHT15 is not set
 # CONFIG_SENSORS_SHT21 is not set
 # CONFIG_SENSORS_SMM665 is not set
@@ -1761,10 +1767,11 @@ CONFIG_SENSORS_APDS9930=y
 CONFIG_SENSORS_APDS990X_MRVL=y
 # CONFIG_SENSORS_GRIP is not set
 # CONFIG_SENSORS_STK3X1X is not set
-# CONFIG_SENSORS_LIS3DH is not set
+CONFIG_SENSORS_LIS3DH=y
 # CONFIG_SENSORS_TSL2772 is not set
 # CONFIG_SENSORS_MC3XXX is not set
-# CONFIG_SENSORS_LTR558_I2C is not set
+CONFIG_SENSORS_LTR558_I2C=y
+# CONFIG_SENSORS_LTR55X_I2C is not set
 # CONFIG_SENSOR_EPL2182 is not set
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
