--- a/arch/arm64/boot/dts/pxa1936-aloe-v01.dts
+++ b/arch/arm64/boot/dts/pxa1936-aloe-v01.dts
@@ -440,7 +440,7 @@
 			OV13850R2A: sensor@4 {
 				compatible = "ovt,ov13850r2a";
 				status = "okay";
-				reg = <0x10>;
+				reg = <0x36>;
 				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
 				clock-names = "SC2MCLK";
 				sc2-i2c-dyn-ctrl;
@@ -452,7 +452,7 @@
 				dphy6 = <0x4001001>;
 				af_2v8-supply = <&ldo8>;
 				avdd_2v8-supply = <&ldo7>;
-				dovdd_1v8-supply = <&buck2>;
+				dovdd_1v8-supply = <&ldo4>;
 				dvdd_1v2-supply = <&ldo17>;
 				pwdn-gpios = <&gpio 68 1>;
 				reset-gpios = <&gpio 67 1>;
