--- a/arch/arm64/boot/dts/pxa1936-aloe-v01.dts
+++ b/arch/arm64/boot/dts/pxa1936-aloe-v01.dts
@@ -312,7 +312,7 @@
 				status = "okay";
 				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
 				clock-names =  "SC2MCLK";
-				reg = <0x36>;
+				reg = <0x38>;
 				sc2-i2c-dyn-ctrl;
 				adapter = <0x1>;
 				sensor-pos = <1>;
@@ -347,6 +347,26 @@
                                pwdn-gpios = <&gpio 70 1>;
                                reset-gpios = <&gpio 69 1>;
                        };
+			OV8858R2A_F: sensor@2 {
+				compatible = "ovt,ov8858r2a_front";
+				status = "okay";
+				reg = <0x10>;
+				clocks = <&soc_clocks PXA1936_CLK_SC2_MCLK>;
+				clock-names = "SC2MCLK";
+				sc2-i2c-dyn-ctrl;
+				adapter = <0x1>;
+				sensor-pos = <1>;
+				mclk = <26000000>;
+				dphy3 = <0x1500>;
+				dphy5 = <0xff>;
+				dphy6 = <0x1001>;
+				af_2v8-supply = <&ldo8>;
+				avdd_2v8-supply = <&ldo7>;
+				dovdd_1v8-supply = <&ldo4>;
+				dvdd_1v2-supply = <&ldo17>;
+				pwdn-gpios = <&gpio 70 1>;
+				reset-gpios = <&gpio 69 1>;
+			};
 
 		};
 		backsensor {
