--- a/arch/arm64/configs/pxa1936_defconfig
+++ b/arch/arm64/configs/pxa1936_defconfig
@@ -2043,6 +2043,7 @@ CONFIG_B52_CAMERA_IMX219=y
 CONFIG_B52_CAMERA_OV5648=y
 CONFIG_B52_CAMERA_OV2680=y
 CONFIG_B52_CAMERA_OV8858=y
+CONFIG_B52_CAMERA_OV8858_FRONT=y
 CONFIG_B52_CAMERA_SR544=y
 CONFIG_B52_CAMERA_HI551=y
 CONFIG_B52_CAMERA_S5K5E3=y
