arm: pxa1908_defconfig: enable the early printk
In order to debug hang, it is better to enable the
early printk

Change-Id: I35484621dac66bd2e1158f7328d59fb1b6baa796
Signed-off-by: Dongjiu Geng <djgeng@marvell.com>

--- a/arch/arm/configs/pxa1908_defconfig
+++ b/arch/arm/configs/pxa1908_defconfig
@@ -3290,6 +3290,7 @@ CONFIG_STACKTRACE=y
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
 CONFIG_DEBUG_BUGVERBOSE=y
+CONFIG_DEBUG_LL=y
 # CONFIG_DEBUG_WRITECOUNT is not set
 # CONFIG_DEBUG_LIST is not set
 # CONFIG_DEBUG_SG is not set
@@ -3350,6 +3351,7 @@ CONFIG_ATOMIC64_SELFTEST=y
 CONFIG_REGDUMP=y
 # CONFIG_SAMPLES is not set
 CONFIG_EARLY_PRINTK=y
+CONFIG_EARLY_PRINTK_DIRECT=y
 # CONFIG_PID_IN_CONTEXTIDR is not set
 
 #
