--- a/arch/arm/configs/pxa1908_defconfig
+++ b/arch/arm/configs/pxa1908_defconfig
@@ -2204,6 +2204,7 @@ CONFIG_MMP_PANEL_OTM8018B=y
 CONFIG_MMP_PANEL_OTM1283A=y
 CONFIG_MMP_PANEL_TD043MGEA1=y
 CONFIG_MMP_PANEL_HX8394=y
+CONFIG_MMP_PANEL_HX8394D=y
 CONFIG_MMP_PANEL_FL10802=y
 # CONFIG_MMP_PANEL_JD9365 is not set
 # CONFIG_MMP_PANEL_JD9161_HSD5 is not set
