arm64: add support for soc camera sp2529
Change-Id: I47983a674bac70e86710dbd0b5a09e34f61dee0b
Signed-off-by: Peng Du <pengdu@marvell.com>

--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -977,6 +977,12 @@
 		reg = <0x2 0x0>;
 	};
 
+	soc-camera@3 {
+		compatible = "soc-camera-pdrv";
+		status = "disabled";
+		reg = <0x3 0x0>;
+	};
+
 	plat_cam {
 		compatible = "marvell,platform-cam";
 		status = "disabled";
