arm: config: add soc camera sp2529 support for pxa1908sl
Change-Id: I0ebdf9a299e280848d8e8f323ccc9c25d8231277
Signed-off-by: Peng Du <pengdu@marvell.com>

--- a/arch/arm/configs/pxa1908_defconfig
+++ b/arch/arm/configs/pxa1908_defconfig
@@ -2088,6 +2088,7 @@ CONFIG_ECS_DRIVER=y
 CONFIG_ECS_DRIVER_SUBDEV=y
 # CONFIG_SOC_CAMERA_OV5640_ECS is not set
 CONFIG_SOC_CAMERA_SP0A20_ECS=y
+CONFIG_SOC_CAMERA_SP2529_ECS=y
 
 #
 # Flash devices
