--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -911,6 +911,21 @@
 					avdd-supply = <&ldo11>;
 					status = "disabled";
 				};
+
+				touch4: mstar@26 {
+					compatible = "mstar,msg2238";
+					pinctrl-names = "default";
+					pinctrl-0 = <&touch_pins>;
+					reg = <0x26>;
+					interrupt-parent = <&gpio>;
+					interrupts = <72 0x1>;
+					mstar,abs-x-max = <720>;
+					mstar,abs-y-max = <1280>;
+					mstar,irq-gpios = <&gpio 72 0>;
+					mstar,reset-gpios = <&gpio 75 0>;
+					mstar,v_tsp-supply = <&ldo11>;
+					status = "disabled";
+				};
 			};
 
 			twsi2: i2c@d4037000 {
