--- a/drivers/char/Kconfig
+++ b/drivers/char/Kconfig
@@ -686,6 +686,17 @@ config VIBRATOR_PWM
 	  The pwm supllied by the PWM3 pin on PXA1928 chip
 	  If unsusre, say N.
 
+config VIBRATOR_GENERIC
+        tristate "Generic vibrator"
+        depends on ANDROID_TIMED_OUTPUT
+        default y
+        help
+          Say Y here if you want to support Application to
+          have vibrator feature
+
+          Generic vibrator driver can support vibrator controlled
+          by PWM/GPIO/LDO.
+
 config VIBRATOR_SIMPLE
 	tristate "simple based vibrator"
 	depends on ANDROID_TIMED_OUTPUT
