--- a/arch/arm/configs/pxa1908_defconfig
+++ b/arch/arm/configs/pxa1908_defconfig
@@ -1863,7 +1863,7 @@ CONFIG_SENSORS_APDS9930=y
 # CONFIG_SENSORS_TSL2772 is not set
 CONFIG_SENSORS_MC3XXX=y
 # CONFIG_SENSORS_LTR558_I2C is not set
-# CONFIG_SENSOR_EPL2182 is not set
+CONFIG_SENSOR_EPL2182=y
 CONFIG_THERMAL=y
 CONFIG_THERMAL_HWMON=y
 CONFIG_THERMAL_OF=y
