arm64: dts: add mmplog device node for helan3
Add the mmplog device node which specify the memory base and size

Change-Id: Icfdc443b7eb1f9666e1dd00f570e97925d773829
Signed-off-by: Jinfeng Chen <jfchen@marvell.com>
Signed-off-by: Tim Wang <wangtt@marvell.com>

--- a/arch/arm64/boot/dts/pxa1936.dtsi
+++ b/arch/arm64/boot/dts/pxa1936.dtsi
@@ -1132,4 +1132,11 @@
 			     <0 110 4>,
 			     <0 111 4>;
 	};
+
+	mmplog {
+		compatible = "marvell,mmplog-heap";
+		mmplog-base = <0x08000000>;
+		mmplog-size = <0x100000>;
+		status = "okay";
+	};
 };
