--- a/arch/arm/configs/armadillo_edge_defconfig
+++ b/arch/arm/configs/armadillo_edge_defconfig
@@ -2692,14 +2692,11 @@ CONFIG_LEDS_CLASS=y
 #
 # LED drivers
 #
-CONFIG_LEDS_88PM830=y
-CONFIG_LEDS_88PM88X_RGB=y
-CONFIG_LEDS_88PM88X_CFD=y
 # CONFIG_LEDS_LM3530 is not set
 CONFIG_LEDS_LM3532=y
 # CONFIG_LEDS_LM3642 is not set
 # CONFIG_LEDS_PCA9532 is not set
-# CONFIG_LEDS_GPIO is not set
+CONFIG_LEDS_GPIO=y
 # CONFIG_LEDS_LP3944 is not set
 # CONFIG_LEDS_LP5521 is not set
 # CONFIG_LEDS_LP5523 is not set
@@ -2723,11 +2720,11 @@ CONFIG_LEDS_88PM828X=y
 #
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=y
-# CONFIG_LEDS_TRIGGER_ONESHOT is not set
-# CONFIG_LEDS_TRIGGER_HEARTBEAT is not set
+CONFIG_LEDS_TRIGGER_ONESHOT=y
+CONFIG_LEDS_TRIGGER_HEARTBEAT=y
 # CONFIG_LEDS_TRIGGER_BACKLIGHT is not set
 # CONFIG_LEDS_TRIGGER_CPU is not set
-# CONFIG_LEDS_TRIGGER_GPIO is not set
+CONFIG_LEDS_TRIGGER_GPIO=y
 # CONFIG_LEDS_TRIGGER_DEFAULT_ON is not set
 
 #
