--- a/arch/arm/configs/armadillo_edge_defconfig
+++ b/arch/arm/configs/armadillo_edge_defconfig
@@ -643,7 +643,7 @@ CONFIG_IP_PNP_BOOTP=y
 # CONFIG_IP_PNP_RARP is not set
 # CONFIG_NET_IPIP is not set
 # CONFIG_NET_IPGRE_DEMUX is not set
-CONFIG_NET_IP_TUNNEL=y
+# CONFIG_NET_IP_TUNNEL is not set
 # CONFIG_IP_MROUTE is not set
 CONFIG_SYN_COOKIES=y
 # CONFIG_NET_IPVTI is not set
@@ -651,7 +651,7 @@ CONFIG_SYN_COOKIES=y
 CONFIG_INET_ESP=y
 # CONFIG_INET_IPCOMP is not set
 # CONFIG_INET_XFRM_TUNNEL is not set
-CONFIG_INET_TUNNEL=y
+# CONFIG_INET_TUNNEL is not set
 CONFIG_INET_XFRM_MODE_TRANSPORT=y
 CONFIG_INET_XFRM_MODE_TUNNEL=y
 CONFIG_INET_XFRM_MODE_BEET=y
@@ -667,27 +667,6 @@ CONFIG_IPV6=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
-CONFIG_INET6_AH=y
-CONFIG_INET6_ESP=y
-CONFIG_INET6_IPCOMP=y
-CONFIG_IPV6_MIP6=y
-CONFIG_INET6_XFRM_TUNNEL=y
-CONFIG_INET6_TUNNEL=y
-CONFIG_INET6_XFRM_MODE_TRANSPORT=y
-CONFIG_INET6_XFRM_MODE_TUNNEL=y
-CONFIG_INET6_XFRM_MODE_BEET=y
-CONFIG_INET6_XFRM_MODE_ROUTEOPTIMIZATION=y
-CONFIG_IPV6_VTI=y
-CONFIG_IPV6_SIT=y
-CONFIG_IPV6_SIT_6RD=y
-CONFIG_IPV6_NDISC_NODETYPE=y
-CONFIG_IPV6_TUNNEL=y
-CONFIG_IPV6_GRE=y
-CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_SUBTREES=y
-CONFIG_IPV6_MROUTE=y
-CONFIG_IPV6_MROUTE_MULTIPLE_TABLES=y
-CONFIG_IPV6_PIMSM_V2=y
 # CONFIG_NETLABEL is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NET_ACTIVITY_STATS=y
@@ -3131,9 +3110,9 @@ CONFIG_MRVL_PANIC_FLUSH=y
 CONFIG_MRVL_SKMALLOC=y
 CONFIG_SKMALLOC_REBOOT_NOTIFY=y
 CONFIG_MRVL_SKMALLOC_WIRELESS_EN=y
-CONFIG_MRVL_MMP_MODEM=y
+# CONFIG_MRVL_MMP_MODEM is not set
 # CONFIG_SSIPC_SUPPORT is not set
-CONFIG_MRVL_MMP_CM3=y
+# CONFIG_MRVL_MMP_CM3 is not set
 CONFIG_MRVL_RSV_PAGE=y
 
 #
