Fix the building issue of boot image, and add zImage booting support.
Changes:
1) zImage entry point switches EL2-aarch64 to EL1-aarch32 instead of
kernel entry point.
2) Set ZRELADDR of mach-mmp/Makefile.boot to 8MB.
3) Fix buggy TTBCR setup in arch/arm/boot/compressed/head.S Bits
[2:0] and not [1:0] should be set to 0 as TTBCR.N is a 3-bit field
and non-0 value would result in truncated TTB space and thus limited
virtual space accessible.
4) Kernel defconfig: enable CONFIG_APPENDED_DTB and related settings.
5) Disable stack protector on atags-to-fdt function.
The reason is -fstack-protector-strong generates a stack canary code in
atags_to_fdt(), which accesses __stack_chk_guard in .bss. This violates
the assumption that atags_to_fdt does not access any globals as
explicitly stated in comments before the function invocation in head.S.
The function is called before GOT relocations are performed, thus
__stack_chk_guard is accessed by offset in GOT, not an actual relocated
address. That this might work on many platforms that have accessible
memory at low addresses (similar to a NULL pointer access),but On iap140
the lowest 8MB of physical address space is not accessible to
Non-Security, therefore __stack_chk_guard results in exception.

BUG=25393413
BUG=25421621

Change-Id: I72164e43b2dc400ae7db0e3403e5ae78cd6e5a34

--- a/arch/arm/boot/compressed/Makefile
+++ b/arch/arm/boot/compressed/Makefile
@@ -124,6 +124,14 @@ endif
 ccflags-y := -fpic -mno-single-pic-base -fno-builtin -I$(obj)
 asflags-y := -DZIMAGE
 
+ifeq ($(CONFIG_ARM_ATAG_DTB_COMPAT),y)
+CFLAGS_atags_to_fdt.o := -fno-stack-protector
+CFLAGS_fdt.o := -fno-stack-protector
+CFLAGS_fdt_ro.o := -fno-stack-protector
+CFLAGS_fdt_rw.o := -fno-stack-protector
+CFLAGS_fdt_wip.o := -fno-stack-protector
+endif
+
 # Supply kernel BSS size to the decompressor via a linker symbol.
 KBSS_SZ = $(shell $(CROSS_COMPILE)size $(obj)/../../../../vmlinux | \
 		awk 'END{print $$3}')
