DT: Disable the keypad setting in DT because the device is unused and cause the error KEY_VOLUMEUP events.
BUG=25655525

Change-Id: I2e0d0baf5d6bf1e2696b0dbae87c93144b0b6ce3

--- a/arch/arm64/boot/dts/pxa1908-dkb.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dtsi
@@ -47,7 +47,7 @@
 				marvell,debounce-interval = <30>;
 				pinctrl-names = "default";
 				pinctrl-0 = <&keypad_in_func>;
-				status = "okay";
+				status = "disable";
 			};
 
 			keyreset {
