usb: Fix the issue of USB keyboard recognition.
The USB type A's vbus doesn't connect to otgsc, so there is no need to
check its status.

BUG=25653524

Change-Id: Ide3fef19c1820c9ff363c647005eab7a003a398f

--- a/arch/arm64/boot/dts/pxa1908.dtsi
+++ b/arch/arm64/boot/dts/pxa1908.dtsi
@@ -189,6 +189,7 @@
 				marvell,udc-mode = <MV_USB_MODE_OTG>;
 				marvell,extern-attr = <0>;
 				marvell,otg-force-a-bus-req;
+				marvell,otg-force-a-vbus-vld;
 				lpm-qos = <PM_QOS_CPUIDLE_BLOCK_AXI>;
 				clocks = <&soc_clocks PXA1U88_CLK_USB>;
 				status = "disabled";
