abox_edge: Remove unused modules to optimize booting time.
DTS changes:
1. Remove unused settings of front camera.
2. Disable unused sensors.
Remove unnecessary debugging information of modules:
1. DVC power down log.
2. sdhci-pxav3 tuning log.
3. Thermal policy log.

Test:
[    3.626789] c2 1 (init) init: init first stage started!

BUG=25579467

Change-Id: Id7e86f709e5adf2d68aa299ec436c17d95b217fb

--- a/arch/arm64/boot/dts/pxa1908-dkb.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dtsi
@@ -81,22 +81,22 @@
 
 			twsi3: i2c@d4013800 {
 				sensor1: apds9930@39 {
-					status = "okay";
+					status = "disable";
 				};
 				sensor2: bmi160@68 {
-					status = "okay";
+					status = "disable";
 				};
 				sensor3: bme280@76 {
-					status = "okay";
+					status = "disable";
 				};
 				sensor4: icm20628@69 {
-					status = "okay";
+					status = "disable";
 				};
 				sensor5: mxc400x@15 {
-					status = "okay";
+					status = "disable";
 				};
 				sensor6: mmc3524x@30 {
-					status = "okay";
+					status = "disable";
 				};
 			};
 		};
