--- a/arch/arm64/boot/dts/pxa1908-dkb.dts
+++ b/arch/arm64/boot/dts/pxa1908-dkb.dts
@@ -54,7 +54,7 @@
 		dvdd_1v2-supply = <&ldo8>;
 
 		dphy_val = <0xff1d00 0x00024733 0x04001001>;
-		status = "okay";
+		status = "disable";
 	};
 
 	soc-camera@0 {
@@ -65,275 +65,19 @@
 		status = "okay";
 	};
 
-	plat_cam {
-		status = "okay";
-		frontsensor {
-			compatible = "marvell,frontsensor";
-			#address-cells = <1>;
-			#size-cells = <0>;
-			status = "okay";
-			OV2680f: sensor@0 {
-				compatible = "ovt,ov2680";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x36>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0xff1d00>;
-				dphy5 = <0x00024733>;
-				dphy6 = <0x4001001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 70 1>;
-				reset-gpios = <&gpio 69 1>;
-			};
-			S5K5E3F: sensor@1 {
-				compatible = "samsung,s5k5e3";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x10>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x5100>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 70 1>;
-				reset-gpios = <&gpio 69 1>;
-			};
-		};
-		backsensor {
-			compatible = "marvell,backsensor";
-			#address-cells = <1>;
-			#size-cells = <0>;
-			status = "okay";
-
-			OV5642: sensor@0 {
-				compatible = "ovt,ov5642";
-				sensor-name = "ovt,ov5642";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x3c>;
-				adapter = <0x1>;
-				status = "okay";
-				mclk = <24000000>;
-				sensor-pos = <1>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				/*
-				af_2v8-supply = <&ldo10>;
-				avdd_2v8-supply = <&ldo11>;
-				dovdd_1v8-supply = <&voutsw>;
-				dvdd_1v2-supply = <&ldo12>;
-				*/
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-			OV13850: sensor@1 {
-				compatible = "ovt,ov13850";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x10>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-			SR544: sensor@2 {
-				compatible = "samsung,sr544";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x28>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-			imx219: sensor@3 {
-				compatible = "sony,imx219";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x1A>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-			HI551: sensor@4 {
-				compatible = "hynix,hi551";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x20>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-			OV8858R2A: sensor@5 {
-				compatible = "ovt,ov8858r2a";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names =  "SC2MCLK";
-				reg = <0x10>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-			OV2680b: sensor@6 {
-                                compatible = "ovt,ov2680";
-                                status = "okay";
-                                clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-                                clock-names =  "SC2MCLK";
-                                reg = <0x36>;
-                                sc2-i2c-dyn-ctrl;
-                                adapter = <0x1>;
-                                sensor-pos = <1>;
-                                mclk = <26000000>;
-                                dphy3 = <0x1500>;
-                                dphy5 = <0x11>;
-                                dphy6 = <0x1001>;
-                                af_2v8-supply = <&ldo11>;
-                                avdd_2v8-supply = <&ldo10>;
-                                dovdd_1v8-supply = <&buck2>;
-                                dvdd_1v2-supply = <&ldo8>;
-                                pwdn-gpios = <&gpio 68 1>;
-                                reset-gpios = <&gpio 67 1>;
-                        };
-                        S5K5E3B: sensor@7 {
-				compatible = "samsung,s5k5e3";
-				status = "okay";
-                                clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-                                clock-names =  "SC2MCLK";
-				reg = <0x10>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x5100>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v2-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-			S5K4H5: sensor@8 {
-			         compatible = "samsung,s5k4h5";
-			         status = "okay";
-			         clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-			         clock-names =  "SC2MCLK";
-			         reg = <0x10>;
-			         sc2-i2c-dyn-ctrl;
-			         adapter = <0x1>;
-			         sensor-pos = <1>;
-			         mclk = <26000000>;
-			         dphy3 = <0x1500>;
-			         dphy5 = <0x11>;
-			         dphy6 = <0x1001>;
-			         af_2v8-supply = <&ldo11>;
-			         avdd_2v8-supply = <&ldo10>;
-			         dovdd_1v8-supply = <&buck2>;
-			         dvdd_1v2-supply = <&ldo8>;
-			         pwdn-gpios = <&gpio 68 1>;
-			         reset-gpios = <&gpio 67 1>;
-			};
-			OV5648: sensor@9 {
-				compatible = "ovt,ov5648";
-				status = "okay";
-				clocks = <&soc_clocks PXA1U88_CLK_SC2_MCLK>;
-				clock-names = "SC2MCLK";
-				reg = <0x36>;
-				sc2-i2c-dyn-ctrl;
-				adapter = <0x1>;
-				sensor-pos = <1>;
-				mclk = <26000000>;
-				dphy3 = <0x1500>;
-				dphy5 = <0xff>;
-				dphy6 = <0x1001>;
-				af_2v8-supply = <&ldo11>;
-				avdd_2v8-supply = <&ldo10>;
-				dovdd_1v8-supply = <&buck2>;
-				dvdd_1v5-supply = <&ldo8>;
-				pwdn-gpios = <&gpio 68 1>;
-				reset-gpios = <&gpio 67 1>;
-			};
-		};
-	};
-
 	b52isp_sc2_csi0 {
 	        status = "okay";
 	};
+
 	b52isp_sc2_csi1 {
 			csi_mux_repacked;
 	        status = "okay";
 	};
+
 	b52isp_sc2_dma0 {
 	        status = "okay";
 	};
+
 	b52isp_sc2_dma1 {
 	        status = "okay";
 	};
