Fixed the wifi performance issue
1) To pass the wifi calibration data to wifi driver
2) Added the wifi driver error handling for de-association

BUG=25731975

Change-Id: I2b72bc92f969b0abf155eb78a0de2de2a21e9528

--- a/arch/arm64/boot/dts/pxa1908-board-common.dtsi
+++ b/arch/arm64/boot/dts/pxa1908-board-common.dtsi
@@ -1232,6 +1232,8 @@
 		drvdbg = <0x80007>;
 		dev_cap_mask = <0xffffcfff>;
 		init_cfg = "mrvl/wifi_init_cfg.conf";
+		txpwrlimit_cfg = "mrvl/txpwrlimit_cfg.bin";
+		cal_data_cfg = "mrvl/WlanCalData_ext.conf";
 		reg_alpha2 = "US";
 		p2p_enh = <1>;
 	};
