abox_edge: Enable CONFIG_MRVL_TZDD for security driver.
Update marvell security drive update to date.

BUG=25833706

Change-Id: I305347e9571401ef59ee94d7bdf21cbfbaf8a5f4

--- a/arch/arm/configs/abox_edge_defconfig
+++ b/arch/arm/configs/abox_edge_defconfig
@@ -3055,7 +3055,7 @@ CONFIG_MRVL_WL_SD8777=y
 CONFIG_MRVL_WL_BUILD_TYPE=y
 CONFIG_MRVL_DEBUG=n
 CONFIG_MRVL_LOG=n
-# CONFIG_MRVL_TZDD is not set
+CONFIG_MRVL_TZDD=y
 # CONFIG_MRVL_SW_JTAG is not set
 CONFIG_MRVL_PANIC_FLUSH=y
 # CONFIG_PXA_RAMDUMP is not set
